# NeuralNetwork

./: CMakeLists.txt  README
src/: main.cc  neural_net.cc  neural_net.hh  tools.cc  tools.hh
